[metadata]
name = rcpicar_example
version = 0.0.1
author = Franz Mandl
author_email = noreply@franzmandl.com
description = RCPiCar: Radio-controlled Raspberry Pi Car - Example
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/franzmandl/rcpicar_example
project_urls =
    Bug Tracker = https://github.com/franzmandl/rcpicar_example/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    rcpicar==0.0.1

[options.package_data]
rcpicar_example = py.typed

[options.entry_points]
console_scripts =
    rcpicar_client_gtk = rcpicar_example.client_gtk.__main__:main
    rcpicar_server = rcpicar_example.server.__main__:main

[options.extras_require]
client =
    PyGObject==3.40.1
    rcpicar[client]==0.0.1
server =
    adafruit-circuitpython-ads1x15==2.2.8
    rcpicar[server]==0.0.1
tests =
    build
    mypy==0.812
    pycodestyle==2.7.0
    twine

[options.packages.find]
where = src

[mypy]
strict = True
exclude = ^(\..*|build/.*|dist/.*|venv/.*)$
files = .
